--- a/main/css/schoolPage.css
+++ b/main/css/schoolPage.css
@@ -1,3 +1,58 @@
+.mainContainer{
+    display: flex;
+    align-items: center;
+    margin: 0;
+    padding: 0%;
+    width: 100%;
+    font-family: 'Roboto','Segoe UI', Tahoma, Verdana, sans-serif;
+    overflow: auto;
+}
+
+.tabelaAlunos{
+    width: 80%;
+    height: auto;
+    margin-top: 2em;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+
+.alunoGroup{
+    background-color: white;
+    margin-top: 2em;
+    height: 2em;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.dadoAlunos, .acoesAluno{
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    height: 2em;
+    width: auto;
+}
+
 .aluno{
-    background-color: #F0EFF4;
+    font-size: 11pt;
+    text-align: left;
+    margin-left: 1.5em;
+}
+
+.botaoAluno{
+    cursor: pointer;
+    border: none;
+    text-emphasis: none;
+    background-color: white;
+    height: 2em;
+    width: auto;
+    margin-right: .5em;
+}
+
+.botaoAluno img {
+    width: auto;
+    height: 1.7em;
 }
