--- a/main/css/schoolPage.css
+++ b/main/css/schoolPage.css
@@ -98,3 +98,70 @@
     display: inline-block;
     vertical-align: middle;
 }
+
+/*RELATORIO CONTAINER ----------------*/
+.modalContainer{
+    display: none; 
+    position: fixed;
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
+.modalHeader{
+    height: 2em;
+    width: 100%;
+    margin: 0;
+    padding: 0%;
+    
+}
+.relatorio{
+    background-color: white;
+    height: 70%;
+    width: 75%;
+    margin-top: 5em;
+    margin-left: auto;
+    margin-right: auto;
+    padding: .5em 3em;
+    overflow: auto;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    margin: 0;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+
+.itemRelat{
+    height: auto;
+    max-height: 10em;
+    overflow: auto;
+    padding: 0%;
+    margin: 0;
+    margin-bottom: 1em;
+}
+.itemRelat h1{
+    font-weight: 700;
+    font-size: 12pt;
+    color: black;
+}
+
+.itemRelat p{
+    font-weight: 500;
+    font-size: 12pt;
+    color: black;
+}
