--- a/main/css/schoolPage.css
+++ b/main/css/schoolPage.css
@@ -36,10 +36,10 @@
     height: 2em;
 }
 .dadoAlunos{
-    width: 80%;
+    width: 85%;
 }
 .acoesAluno{
-    width: 20%;
+    width: 15%;
     justify-content: space-between;
 }
 
@@ -203,4 +203,14 @@
     margin-bottom: auto;
     height: 2em;
     width: 100%;
+}
+
+.buttonArea{
+    background-color: #F0EFF4;
+    height: 2.5em;
+    width: 100%;
+    margin: 0;
+    padding: 0%;
+    display: flex;
+    align-items: row;
 }
