--- a/main/css/schoolPage.css
+++ b/main/css/schoolPage.css
@@ -15,7 +15,7 @@
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 0;
-    padding-bottom: 0;
+    padding-bottom: 2em;
 }
 
 .alunoGroup{
