--- a/main/css/main.css
+++ b/main/css/main.css
@@ -74,75 +74,6 @@ ul{
     margin-bottom: auto;
 }
 
-/*Formulario*/
-.formContainer{
-    padding-top: 4em;
-    text-align: center;
-}
-form{
-    height: auto;
-    width: 80%;
-    margin: auto;
-}
-fieldset {
-    border: 0;
-    padding: 0%;
-    margin: 0;
-    float: center;
-}
-label, input, select, textarea, button {
-    font-family: 'Roboto','Segoe UI', Tahoma, Verdana, sans-serif;
-    font-size: 1em;
-}
-.conjunto:before, .grupo:after {
-    content: " ";
-    display: table;
-}
-.conjunto:after {
-    clear: both;
-}
-
-.grupo{
-    margin-bottom: 1.3em;
-    float: center;
-}
-
-.grupo label{
-    display: inline-block;
-    width: 100px;
-    text-align: right;
-
-    font-size: 12pt;
-    font-weight: 400;
-    color: black;
-    margin-right: .5em;
-}
-
-.grupo input[type="text"],
-.grupo textarea,
-.grupo select{
-    border: none;
-    background-color: #ffffff;
-    padding: .3em;
-    display: inline-block;
-    vertical-align: middle;
-}
-
-.conjunto .grupo{
-    float: left;
-    margin-right: 1.5em;
-}
-.conjunto{
-    margin-left: 9.7em;
-}
-
-.opcoes{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-left: 16.5em;
-    padding-right: 10em;
-}
 .botao {
     
     background-color: #9055A2;
@@ -159,9 +90,53 @@ label, input, select, textarea, button {
     padding-left: 1em;
     padding-right: 1em;
 }
-.alignBotao{
-    margin-top: 4em;
-}
 .botao:hover{
     background-color: #291528;
+}
+
+.inputGenerico{
+    border: none;
+    background-color: #ffffff;
+    display: inline-block;
+    vertical-align: middle;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-left: 1em;
+    padding-left: .3em;
+    font-size: 11pt;
+    text-align: left;
+    height: 2em;
+}
+
+.opButtons{
+    background-color: #3A3E3B;
+    height: 1.5em;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.opButtons button{
+    background-color: #3A3E3B;
+    margin-right: .5em;
+    border: none;
+    color: white;
+    font-family: 'Montserrat','Segoe UI', Tahoma, Verdana, sans-serif;
+    font-size: 10pt;
+    cursor: pointer;
+}
+
+.modalContainer{
+    display: none; 
+    position: fixed;
+    z-index: 20; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
 }
