--- a/main/css/main.css
+++ b/main/css/main.css
@@ -140,3 +140,20 @@ ul{
     background-color: rgb(0,0,0);
     background-color: rgba(0,0,0,0.4);
 }
+
+.carregando{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.carregando h1{
+    font-size: 20pt;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    color: #3A3E3B;
+    font-weight: 500;
+    font-family: 'Montserrat','Segoe UI', Tahoma, Verdana, sans-serif;    
+}
