--- a/main/css/schoolPage.css
+++ b/main/css/schoolPage.css
@@ -189,3 +189,12 @@
     display: flex;
     align-items: row;
 }
+
+/*CABECALHO*/
+.btnArea{
+    height: 20%;
+    width: 10%;
+    margin-left: auto;
+    margin-right: 1.5em;
+    
+}
