--- a/main/css/schoolPage.css
+++ b/main/css/schoolPage.css
@@ -192,9 +192,8 @@
 
 /*CABECALHO*/
 .btnArea{
-    height: 20%;
+    height: auto;
     width: 10%;
     margin-left: auto;
     margin-right: 1.5em;
-    
 }
